# example-terminal-bench-env

./: .gitignore  README.md
configs/rl/: terminal-bench.toml
environments/example_terminal_bench_env/: example_terminal_bench_env.py  pyproject.toml
environments/example_terminal_bench_env/sample_tasks/nginx_setup/: Dockerfile  task.yaml  test.sh
environments/example_terminal_bench_env/sample_tasks/nginx_setup/tests/: test_outputs.py
